Fixed: MGOR-176: Create new game | Checkboxes not visible

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -443,12 +443,11 @@ body {
   }
 }
 
-.form-check {
-  .icheckbox_flat-blue, .iradio_flat-blue {
-    background: url(/build/css/blue.png) no-repeat 0 0;
-  }
-
-  .icheckbox_flat-blue.checked {
-    background-position: -22px 0;
-  }
+.icheckbox_flat-blue, .iradio_flat-blue {
+  background: url(/build/css/blue.png) no-repeat 0 0;
 }
+
+.icheckbox_flat-blue.checked {
+  background-position: -22px 0;
+}
+
